--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Dev-test toml file
+config-test.toml
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
